avoid text breaks on tables

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -19,3 +19,7 @@ section.homepage {
     max-width: 100%;
   }
 }
+
+table {
+  overflow-wrap: break-word;
+}
